--- a/docs/基础/03排序/06_堆.md
+++ b/docs/基础/03排序/06_堆.md
@@ -415,7 +415,7 @@ void heapSort(int[] nums) {
 ```java
 // 默认就是小顶堆
 PriorityQueue<Integer> q = new PriorityQueue<>();
-// 大顶堆
+// 大顶堆，传入比较器
 PriorityQueue<Integer> q = new PriorityQueue<>((a, b) -> b - a);
 
 q.offer(nums[i]);
