--- a/docs/基础/06动态规划/定义/背包问题.md
+++ b/docs/基础/06动态规划/定义/背包问题.md
@@ -63,77 +63,16 @@ double fractionalKnapsack(Item[] items, int[] wgt, int[] val, int cap) {
 
 ![image-20240812231037699](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408122310736.png)
 
-### n x (cap+1)
-
-`int[][] dp = new int[n][cap + 1];`
-
-- `dp[i][c]`表示**前i+1个物品**（`w[0...i]`）一起考虑后对应的不同容量背包`[0...cap]`下的最大价值。
-- 待求解的是 `dp[n-1,cap]` ，因此需要一个尺寸为 (n)×(cap+1) 的二维 dp 表。
-
-- `dp[0]`表示第一个物品，`dp[n-1]`表示所有物品。
-- 背包容量必须包含0和n，`dp[i][0]`表示没装东西，`dp[i][cap]`表示最大容量。
-
-
-
-边界条件:
-
-- 列首：`dp[x][0]=0`，表示背包容量0时，价值为0
-- 首行：`dp[0][x]=0||v[0]`，**讨论第一个物品**，表示第一个物品装不入时为0，装的进去时为它的价值。
-
-
-
-递推公式 
-
-$dp[i][c] =  \begin{cases}  dp[i-1][c], & \text{if } c < w[i] \\ \max(dp[i-1][c], dp[i-1][c - w[i]] + v[i]), & \text{if } c \geq w[i] \end{cases}$
-
-
-
-最终返回的是`dp[n-1][cap]`
-
-
-```java
-/* 0-1 背包：动态规划 */
-public int pack01(int[] w, int[] v, int cap) {
-    int n = w.length;
-    int[][] dp = new int[n][cap + 1];
-
-    // 列首空：当背包容量为0时，最大价值是0
-    // for (int i = 0; i < n; i++) {
-    //    dp[i][0] = 0;
-    // }
-    // 首行：讨论第一个物品
-    for (int c = 0; c <= cap; c++) {
-        if (c >= w[0]) {
-            dp[0][c] = v[0];
-        }
-    }
-    
-    // 从格子[1,1]开始，第二个物品
-    for (int i = 1; i < n; i++) {
-        for (int c = 1; c <= cap; c++) {
-            // 装不下：则不选物品 i
-            if (c < w[i]) {
-                dp[i][c] = dp[i - 1][c];
-            } 
-            // 装的下：不选和选物品 i 这两种方案的较大值
-            else{
-                dp[i][c] = Math.max(dp[i - 1][c], dp[i - 1][c - w[i]] + v[i]);
-            }
-        }
-    }
-    return dp[n - 1][cap];
-}
-```
 
 ### 🚀(n+1) x (cap+1) 推荐
 
 `int[][] dp = new int[n + 1][cap + 1]`
 
-- `dp[i][c]`表示**前i个物品**（`w[0...i-1]`）一起考虑后对应的不同容量背包`[0...cap]`下的最大价值。
-- 待求解的是 `dp[n,cap]` ，因此需要一个尺寸为 (n+1)×(cap+1) 的二维 dp 表。
-- `dp[0]`表示无物品，自然价值是0；`dp[n]`是考虑所有物品。
+- `dp[i][c]`表示**前i个物品**（`w[0...i-1]`）一起考虑后对应的背包容量`c`下的最大价值。
+  - `dp[0]`表示无物品，自然价值是0；`dp[n]`是考虑所有物品。
+  - 背包容量必须包含0和n，`dp[i][0]`表示没装东西，`dp[i][cap]`表示最大容量。
 
-- 背包容量必须包含0和n，`dp[i][0]`表示没装东西，`dp[i][cap]`表示最大容量。
+- 待求解的是 `dp[n][cap]` 
 
 
 
@@ -211,29 +150,15 @@ public int pack01(int[] w, int[] v, int cap) {
 }
 ```
 
-#### 理顺 i + 1, i- 1
 
-（1）当前行和上一行都差1，`dp[i][...]` 和 `dp[i-1][...]`，`dp[i+1][...]` 和 `dp[i][...]`
 
-（2）dp数组比物品数组多一个
-
-i从1开始，`dp[i]`  和 `w[i-1]` 
-
-i从0开始，`dp[i+1]` 和 `w[i]`
-
-（3）为什么 n x(cap + 1)就不考虑？
-
-因为物品w和dp数组是对齐的。
-
-（4）为什么空间优化是统一的？
-
-因为没有dp的干扰，只有i=0时w[i]、i=1时w[i-1]的简单关系。
-
-### 空间优化 (cap +1)
+### 🚀空间优化 (cap +1)
 
 都是同一行，递推公式不涉及i和i-1，就不像二维数组一样要特别讨论第一个物品来满足递推公式。
 
-而且刚好第一个物品计算时 dp[x]都是0，递归公式用于第一个物品的结果正确，就不需要特别讨论。
+而且刚好第一个物品计算时 dp[x] 都是0，递归公式用于第一个物品的结果正确，就不需要特别讨论。
+
+- 倒推 c = [cap, 1]
 
 ```java
 public int pack01(int[] w, int[] v, int cap) {
@@ -265,8 +190,85 @@ public int pack01(int[] w, int[] v, int cap) {
     return dp[cap];
 }
 ```
+### n x (cap+1)
+
+`int[][] dp = new int[n][cap + 1];`
+
+- `dp[i][c]`表示**前i+1个物品**（`w[0...i]`）一起考虑后对应的不同容量背包`[0...cap]`下的最大价值。
+- 待求解的是 `dp[n-1,cap]` ，因此需要一个尺寸为 (n)×(cap+1) 的二维 dp 表。
+
+- `dp[0]`表示第一个物品，`dp[n-1]`表示所有物品。
+- 背包容量必须包含0和n，`dp[i][0]`表示没装东西，`dp[i][cap]`表示最大容量。
 
 
+
+边界条件:
+
+- 列首：`dp[x][0]=0`，表示背包容量0时，价值为0
+- 首行：`dp[0][x]=0||v[0]`，**讨论第一个物品**，表示第一个物品装不入时为0，装的进去时为它的价值。
+
+
+
+递推公式 
+
+$dp[i][c] =  \begin{cases}  dp[i-1][c], & \text{if } c < w[i] \\ \max(dp[i-1][c], dp[i-1][c - w[i]] + v[i]), & \text{if } c \geq w[i] \end{cases}$
+
+
+
+最终返回的是`dp[n-1][cap]`
+
+
+```java
+/* 0-1 背包：动态规划 */
+public int pack01(int[] w, int[] v, int cap) {
+    int n = w.length;
+    int[][] dp = new int[n][cap + 1];
+
+    // 列首空：当背包容量为0时，最大价值是0
+    // for (int i = 0; i < n; i++) {
+    //    dp[i][0] = 0;
+    // }
+    // 首行：讨论第一个物品
+    for (int c = 0; c <= cap; c++) {
+        if (c >= w[0]) {
+            dp[0][c] = v[0];
+        }
+    }
+    
+    // 从格子[1,1]开始，第二个物品
+    for (int i = 1; i < n; i++) {
+        for (int c = 1; c <= cap; c++) {
+            // 装不下：则不选物品 i
+            if (c < w[i]) {
+                dp[i][c] = dp[i - 1][c];
+            } 
+            // 装的下：不选和选物品 i 这两种方案的较大值
+            else{
+                dp[i][c] = Math.max(dp[i - 1][c], dp[i - 1][c - w[i]] + v[i]);
+            }
+        }
+    }
+    return dp[n - 1][cap];
+}
+```
+
+### 理顺 i + 1, i- 1
+
+（1）当前行和上一行都差1，`dp[i][...]` 和 `dp[i-1][...]`，`dp[i+1][...]` 和 `dp[i][...]`
+
+（2）dp数组比物品数组多一个
+
+i从1开始，`dp[i]`  和 `w[i-1]` 
+
+i从0开始，`dp[i+1]` 和 `w[i]`
+
+（3）为什么 n x(cap + 1)就不考虑？
+
+因为物品w和dp数组是对齐的。
+
+（4）为什么空间优化是统一的？
+
+因为没有dp的干扰，只有i=0时w[i]、i=1时w[i-1]的简单关系。
 
 ### 练习
 
@@ -309,6 +311,76 @@ public int pack01(int[] w, int cap) {
 ![image-20240813084127881](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408130841883.png)
 
 
+
+
+
+
+### 🚀(n+1) x (cap+1)
+
+$$
+dp[i, c] = \max(dp[i-1, c], dp[i, c - w[i-1]] + v[i-1])
+$$
+
+
+
+```java
+public long packInfinity(int[] w, int[] v, int cap) {
+    int n = w.length;
+    long[][] dp = new long[n + 1][cap + 1];
+    
+    for (int i = 1; i <= n; i++) {
+        for (int c = 1; c <= cap; c++) {
+            // 装不下：则不选物品 i
+	        if (c < w[i-1]) {            
+                dp[i][c] = dp[i - 1][c];
+            } 
+            // 装的下：不选和选物品 i 这两种方案的较大值
+            else {
+                dp[i][c] = Math.max(dp[i - 1][c], dp[i][c - w[i-1]] + v[i-1]);
+            }
+        }
+    }
+    return dp[n][cap];
+}
+```
+
+### 🚀空间优化 (cap +1)
+
+同样，都是同一行，就不需要特别讨论第一个物品。
+
+- 正序遍历背包容量。
+
+```java
+public long packInfinity(int[] w, int[] v, int cap) {
+    int n = w.length;
+    long[] dp = new long[cap + 1];
+    
+    // 从第一个物品开始
+    for (int i = 0; i < n; i++) {
+        // 正序，因为需要最新的
+        for (int c = 1; c <= cap; c++) {
+            // 装不下就维持不变
+          	// 装的下：不选和选物品 i 这两种方案的较大值
+            if (c >= w[i]) {
+                dp[c] = Math.max(dp[c], dp[c - w[i]] + v[i]);
+            }
+        }
+    }
+    return dp[cap];
+}
+
+public long packInfinity(int[] w, int[] v, int cap) {
+    int n = w.length;
+    long[] dp = new long[cap + 1];
+
+    for (int i = 0; i < n; i++) {
+        for (int c = w[i-1]; c <= cap; c++) {		// int c = w[i-1] 把if判断的小于则保持不变，融合进去
+            dp[c] = Math.max(dp[c], dp[c - w[i]] + v[i]);
+        }
+    }
+    return dp[cap];
+}
+```
 
 ### n x (cap+1)
 
@@ -355,76 +427,6 @@ public long packInfinity(int[] w, int[] v, int cap) {
     return dp[n - 1][cap];
 }
 ```
-
-
-
-### 🚀(n+1) x (cap+1)
-
-$$
-dp[i, c] = \max(dp[i-1, c], dp[i, c - w[i-1]] + v[i-1])
-$$
-
-
-
-```java
-public long packInfinity(int[] w, int[] v, int cap) {
-    int n = w.length;
-    long[][] dp = new long[n + 1][cap + 1];
-    
-    for (int i = 1; i <= n; i++) {
-        for (int c = 1; c <= cap; c++) {
-            // 装不下：则不选物品 i
-	        if (c < w[i-1]) {            
-                dp[i][c] = dp[i - 1][c];
-            } 
-            // 装的下：不选和选物品 i 这两种方案的较大值
-            else {
-                dp[i][c] = Math.max(dp[i - 1][c], dp[i][c - w[i-1]] + v[i-1]);
-            }
-        }
-    }
-    return dp[n][cap];
-}
-```
-
-### 空间优化 (cap +1)
-
-同样，都是同一行，就不需要特别讨论第一个物品。
-
-此外，正序遍历背包容量。
-
-```java
-public long packInfinity(int[] w, int[] v, int cap) {
-    int n = w.length;
-    long[] dp = new long[cap + 1];
-    
-    // 从第一个物品开始
-    for (int i = 0; i < n; i++) {
-        // 正序，因为需要最新的
-        for (int c = 1; c <= cap; c++) {
-            // 装不下就维持不变
-          	// 装的下：不选和选物品 i 这两种方案的较大值
-            if (c >= w[i]) {
-                dp[c] = Math.max(dp[c], dp[c - w[i]] + v[i]);
-            }
-        }
-    }
-    return dp[cap];
-}
-
-public long packInfinity(int[] w, int[] v, int cap) {
-    int n = w.length;
-    long[] dp = new long[cap + 1];
-
-    for (int i = 0; i < n; i++) {
-        for (int c = w[i-1]; c <= cap; c++) {		// int c = w[i-1] 把if判断的小于则保持不变，融合进去
-            dp[c] = Math.max(dp[c], dp[c - w[i]] + v[i]);
-        }
-    }
-    return dp[cap];
-}
-```
-
 
 
 ### 练习
