--- a/docs/基础/06动态规划/定义/贪心算法.md
+++ b/docs/基础/06动态规划/定义/贪心算法.md
@@ -77,3 +77,9 @@ public static void select(Activity[] activities, int n) {
 切分为和的因子，求因子相乘的最大值。
 
 [15.4  最大切分乘积问题 - Hello 算法 (hello-algo.com)](https://www.hello-algo.com/chapter_greedy/max_product_cutting_problem/#2)
+
+## 其他
+
+ [1染色数组.md](..\..\..\题\笔试\美团\24秋\研7\1染色数组.md)  
+
+[2最大美观值.md](..\..\..\题\笔试\美团\24秋\研7\2最大美观值.md) 
