--- a/docs/题/leetcode/215. 数组中的第K个最大元素.md
+++ b/docs/题/leetcode/215. 数组中的第K个最大元素.md
@@ -1,14 +1,16 @@
-大顶堆：topK，那么就弹出K-1个，堆顶就是。
-
-小顶堆：弹出 n-k个，堆顶就是
-
-小顶堆2：维持k个，更新更大的指到堆顶并下浮，那么堆顶就是topK。
+[toc]
 
 
 
----
+大顶堆n：弹出K-1个，堆顶就是。
 
-# 手大顶堆n: 弹出k-1个
+小顶堆n：弹出 n-k个，堆顶就是
+
+小顶堆k：维持k个，更新更大的指到堆顶并下浮，那么堆顶就是topK。
+
+
+
+## 手大顶堆n: 弹出k-1个
 
 弹出k-1个, 堆顶即为topk
 
@@ -72,7 +74,7 @@ class Solution {
 }
 ```
 
-# 手小顶堆n：弹出n-k个
+## 手小顶堆n：弹出n-k个
 
 ```java
 // 215. 数组中的第K个最大元素
@@ -134,12 +136,15 @@ class Solution {
 }
 ```
 
-# 手小顶堆k: 不断更新
+## 🚀手小顶堆k: 不断更新
 
 时间复杂度更低：nlogk
 
 - 先建立k个元素的小顶堆。
-- 后面的元素，如果大于堆顶，替换堆顶重新下潜（堆大小不变）。
+- 堆大小不变
+  - 或直接入堆，然后弹出堆顶。
+  - 优化：或后面的元素，如果大于堆顶，才替换堆顶重新下潜。
+
 - 堆顶即topK。
 
 ```java
@@ -205,7 +210,7 @@ class Solution {
 }
 ```
 
-# PriorityQueue
+## PriorityQueue
 
 ```java
 // 手大顶堆n: 弹出k-1个
@@ -225,7 +230,7 @@ class Solution {
 ```
 
 ```java
-// 手小顶堆k: 不断更新
+// 手小顶堆n: 弹出 n-k 个
 // 215. 数组中的第K个最大元素
 class Solution {
     public int findKthLargest(int[] nums, int k) {
