--- a/docs/高级/线段树.md
+++ b/docs/高级/线段树.md
@@ -2,7 +2,7 @@
 
 
 
-只求区间和，**前缀和**。
+只求区间和 + 涉及极少量修改，**前缀和**。
 
 求区间和 + 涉及少量修改，**树状数组**。
 
@@ -149,44 +149,6 @@ class NumMatrix {
 
   ![image-20241202110442342](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202412021104394.png)
 
-```java
-class TreeArray{
-    int[] tree;
-
-    public TreeArray(int[] nums){
-        int n = nums.length;
-        this.tree = new int[n + 1];
-        // 初始化：假设nums都是0，自然tree也都是0，那么一个个更新
-        for(int i = 1; i <= n; i++){
-            update(i, nums[i - 1]);
-        }
-    }
-
-    public void update(int i, int add){
-        while(i < tree.length){
-            tree[i] += add;
-            i += i & -i;
-        }
-    }
-
-    // 第1个到第i个（包括） 的和
-    public int count(int i){
-        int res = 0;
-        while(i > 0){
-            res += tree[i];
-            i -= i & -i;
-        }
-        return res;
-        
-        // 递归
-        // if(i == 0){
-        // 		return 0;
-        // }
-        // return count(i - (i & -i)) + tree[i];
-    }
-}
-```
-
 
 
 【初始化】：靠update逐个遍历原数组
@@ -233,6 +195,7 @@ class NumArray {
         public TreeArray(int[] nums) {
             int n = nums.length;
             this.tree = new int[n + 1];
+	        // 初始化：假设nums都是0，自然tree也都是0，那么一个个更新
             for (int i = 1; i <= n; i++) {
                 update(i, nums[i - 1]);
             }
@@ -245,16 +208,153 @@ class NumArray {
             }
         }
 
+        // 第1个到第i个（包括） 的和
         public int count(int i) {
             int res = 0;
-            while (i > 0) {
+            while(i > 0){
                 res += tree[i];
                 i -= i & -i;
             }
             return res;
+            
+            // if (i == 0) {
+            //     return 0;
+            // }
+            // return count(i - (i & -i)) + tree[i];
         }
     }
 }
 ```
 
 ## 线段树
+
+### 一维
+
+![区间 [0, 7] 对应的线段树](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409272111078.png)
+
+```java
+// 303. 区域和检索 - 数组不可变
+class NumArray {
+    Tree tree;
+
+    public NumArray(int[] nums) {
+        tree = new Tree(nums);
+    }
+
+    public int sumRange(int left, int right) {
+        return tree.queryInterval(left, right);
+    }
+}
+
+class Node {
+    int val;
+    int left;
+    int right;
+    int lazy = -1;
+}
+
+class Tree {
+    int[] nums;
+    Node[] nodes;
+
+    public Tree(int[] nums) {
+        this.nums = nums;
+        nodes = new Node[4 * nums.length];
+        for (int i = 0; i < nodes.length; i++) {
+            nodes[i] = new Node();
+        }
+        buildTree(0, 0, nums.length - 1);
+    }
+
+    // left, right 是索引
+    private void buildTree(int idx, int left, int right) {
+        // 设定节点的左右
+        nodes[idx].left = left;
+        nodes[idx].right = right;
+
+        // 递归退出条件：叶子节点
+        if (left == right) {
+            nodes[idx].val = nums[left];
+            return;
+        }
+
+        // 左右子树递归
+        int mid = left + right >>> 1;
+        int left_idx = idx * 2 + 1;
+        int right_idx = idx * 2 + 2;
+        buildTree(left_idx, left, mid);
+        buildTree(right_idx, mid + 1, right);
+
+        // 向上更新
+        pushup(idx);
+    }
+
+    private void pushup(int idx) {
+        int left_idx = idx * 2 + 1;
+        int right_idx = idx * 2 + 2;
+        nodes[idx].val = nodes[left_idx].val + nodes[right_idx].val;
+    }
+
+    public int queryInterval(int left, int right) {
+        return _queryInterval(left, right, 0, 0, nums.length - 1);
+    }
+
+    private int _queryInterval(int qLeft, int qRight, int idx, int left, int right) {
+        // 被查询区间包裹
+        if (qLeft <= left && right <= qRight) {
+            return nodes[idx].val;
+        }
+
+        // 超出
+        if (qRight < left || right < qLeft) {
+            return 0;
+        }
+
+        // 向下更新
+        // pushdown(idx);
+
+        // 左右子树中查询
+        int mid = left + right >>> 1;
+        int left_idx = idx * 2 + 1;
+        int right_idx = idx * 2 + 2;
+        int sum = 0;
+        if (left <= mid) {
+            sum += _queryInterval(qLeft, qRight, left_idx, left, mid);
+        }
+        if (right > mid) {
+            sum += _queryInterval(qLeft, qRight, right_idx, mid + 1, right);
+        }
+        return sum;
+    }
+}
+```
+
+## leetcode
+
+一维：
+
+[303. 区域和检索.md](..\..\题\leetcode\303. 区域和检索.md) ：数组不修改
+
+🚀[307. 区域和检索 - 数组可修改.md](..\..\题\leetcode\307. 区域和检索 - 数组可修改.md) ：超时，要用线段树
+
+[小米25模拟拿糖果.md](..\..\题\笔试\真题\小米25模拟拿糖果.md) 
+
+
+
+二维：
+
+[304. 二维区域和检索.md](..\..\题\leetcode\304. 二维区域和检索.md) 
+
+
+
+
+
+[2602. 使数组元素全部相等的最少操作次数](../../leetcode/2602.%20使数组元素全部相等的最少操作次数.md)
+
+[560. 和为 K 的子数组](../../leetcode/560.%20和为K的子数组.md)
+
+
+
+
+
+todo：[前缀和及其扩展，附题单！](https://leetcode.cn/problems/range-sum-query-immutable/solutions/2693498/qian-zhui-he-ji-qi-kuo-zhan-fu-ti-dan-py-vaar/)
