--- a/docs/基础/01基础知识/数学/数字和数量.md
+++ b/docs/基础/01基础知识/数学/数字和数量.md
@@ -1,10 +1,28 @@
 
 
-![image-20240822172734455](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408221727538.png)
+[toc]
 
-- 刻度（idx）上的数量：区间包括头尾，5-1+1=5
+## 个数
 
-![image-20240822172516761](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408221725983.png)
 
-- 刻度间的数量：物体在刻度间隙，5-1=4。
-- 物体的个数：5个-1个=4个
+
+  
+
+- 物体在刻度上：5-1+1=5
+  - 索引下标idx
+  - ![image-20240822172734455](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408221727538.png)
+
+- 物体在刻度间：5-1=4
+  - ![image-20240822172516761](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408221725983.png)
+
+
+## 数列求和
+
+- **等差数列求和**：
+  - $ S_n = \dfrac{n}{2} \times (a_i + a_j)$, $n = j-i+1$
+  - $S_n = \dfrac{n}{2} \times [2a_i + (j-i)d]$，$a_j = a_i + (j-i)d$
+
+- **等比数列求和**：
+  - $S_n = a_i \times \dfrac{1 - r^n}{1 - r} (r \neq 1)$
+
+
