--- a/docs/基础/数组.md
+++ b/docs/基础/数组.md
@@ -1,1 +1,5 @@
- [945. 使数组唯一的最小增量.md](..\题\leetcode\945. 使数组唯一的最小增量.md) 
+[1827. 最少操作使数组递增.md](..\题\leetcode\1827. 最少操作使数组递增.md)：操作几次让数组严格递增（元素唯一）
+
+[945. 使数组唯一的最小增量.md](..\题\leetcode\945. 使数组唯一的最小增量.md) ：排序后的 1827
+
+[2233. K 次增加后的最大乘积.md](..\题\leetcode\2233. K 次增加后的最大乘积.md) 
