--- a/docs/题/leetcode/945. 使数组唯一的最小增量.md
+++ b/docs/题/leetcode/945. 使数组唯一的最小增量.md
@@ -4,14 +4,130 @@
 >
 > 返回使 `nums` 中的每个值都变成唯一的所需要的最少操作次数。
 
+## 直接和前面比: 43ms
 
+首先将数组进行排序，
+
+然后从左到右遍历数组，让数组严格递增：就是 [1827. 最少操作使数组递增.md](1827. 最少操作使数组递增.md) 
+
+- 如果当前元素大于上一个元素，保持不变；
+- 如果当前元素小于等于上一个元素，就需要增加当前元素到大于上一个元素。
+
+
+
+例如输入 [3, 2, 1, 2, 1, 7]，排序后为 [1, 1, 2, 2, 3, 7]。
+
+![数字增加的过程（动图）](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202503081652858.gif)
+
+```java
+class Solution {
+    public int minIncrementForUnique(int[] nums) {
+        Arrays.sort(nums);
+        int res = 0;
+        int n = nums.length;
+
+        for (int i = 1; i < n; i++) {
+            if (nums[i] <= nums[i - 1]) {
+                int add = nums[i - 1] - nums[i] + 1;
+                nums[i] += add;
+                res += add;
+            }
+        }
+        return res;
+    }
+}
+```
 
 ## 暴力解
 
-排序，然后对于每个重复出现的数，我们暴力地将它递增，直到它增加到一个没有重复出现的数为止。 *O*(*N*2)
+都是*O*(*N*2)
+
+- 排序，然后对于每个重复出现的数，我们暴力地将它递增，直到它增加到一个没有重复出现的数为止。 
+- 不排序，直接用HashSet判断 add() 的返回值，也不行！每个还是要进行 O(n)的遍历找到不重复的元素。
+
+## 找到未出现的
+
+当数组 nums 为 [1, 1, 1, 1, 3, 5] 时，我们发现有 3 个重复的 1，且没有出现过 2，4 和 6，因此一共需要进行 (2 + 4 + 6) - (1 + 1 + 1) = 9 次操作。
+
+- 有4个1，但我们只需要处理重复的3个1.
+- 将1增加到3，3重复增加到4，与将1直接增加到4一样：将 `P` 增加到 `X` 并且将 `Q` 增加到 `Y`，与将 `P` 增加到 `Y` 并且将 `Q` 增加到 `X` 都需要进行 `(X + Y) - (P + Q)` 次操作。
+- 我们不需要将额外出现的数记录下来。当我们发现有 3 个重复的 1 时，我们先将操作次数减去 1 + 1 + 1。接下来，当我们发现 2，4 和 6 都没有出现过时，我们依次将操作次数增加 2，4 和 6。
 
 
+### 计数：745ms
 
-不排序，直接用HashSet判断 add() 的返回值，也不行！每个还是要进行 O(n)的遍历找到不重复的元素。
+- count数组统计数组元素出现的次数
+- 遍历 count 数组（其实就是一种有序）：
+  - 出现大于1次，说明有重复。重复个数是`count[i] - 1`，根据优化直接减去他们自己 `i * (count[i] - 1)`。
+  - 在前面有重复下，遍历到未出现元素时，直接加元素自己。
+- 记录数组元素的最大值，就不用遍历count中超出的部分。剩下的taken重复个数，直接就是对应后面每个元素。
 
-## 
+```java
+class Solution {
+    public int minIncrementForUnique(int[] nums) {
+        int[] count = new int[1000_0000];
+
+        int max = Integer.MIN_VALUE;
+        for(int num: nums){
+            count[num]++;
+            max = Math.max(max, num);
+        }
+
+        int res = 0, taken = 0;
+        for(int i = 0; i <= max; i++){
+            if(count[i] > 1){
+                taken += count[i] - 1;
+                res -= i * (count[i] - 1);
+            }
+            else if(taken > 0 && count[i] == 0){
+                taken--;
+                res += i;
+            }
+        }
+        for(int i = max + 1; taken > 0; taken--, i++){
+            res += i;
+        }
+        return res;
+    }
+}
+```
+
+### 排序区间求等差数列: 43ms
+
+- 如果 `nums[i - 1] == nums[i]`，我们将操作次数减去` nums[i]`，并将重复的数的个数增加 1；
+
+- 如果 `nums[i - 1] < nums[i]`，则
+  - 区间 `[nums[i−1]+1,nums[i]−1]` 里的数都是没有出现过的，所以我们可以将之前重复的数变为这个区间范围内的数。
+  - 设当前重复的数的个数为 taken，则我们最多可以改变 `min = min(taken, nums[i] - 1 - (nums[i - 1] + 1) + 1)` 个数，即区间 `[nums[i−1]+1,nums[i]−1]` 的长度与 taken 二者的较小值。
+  - 然后等差数列求和
+- 在扫描完数组后，如果仍然有重复的数，即 taken 不为 0，我们可以将这些数变为区间 `[nums[n−1]+1,∞)` 中的数，其中 `nums[n - 1]` 是数组 nums 中的最后一个数。
+
+```java
+class Solution {
+    public int minIncrementForUnique(int[] nums) {
+        Arrays.sort(nums);
+
+        int n = nums.length;
+        int taken = 0, res = 0;
+        for (int i = 1; i < n; i++) {
+            if (nums[i - 1] == nums[i]) {
+                taken++;
+                res -= nums[i];
+            } else if (taken > 0) {
+                // 【nums[i-1] + 1, nums[i] - 1 】
+                int min = Math.min(taken, nums[i] - 1 - (nums[i - 1] + 1) + 1);
+                int ai = nums[i - 1] + 1;
+                int aj = nums[i - 1] + 1 + (min - 1) * 1;
+                int sum = min * (ai + aj) / 2;
+                res += sum;
+                taken -= min;
+            }
+        }
+        int ai = nums[n - 1] + 1;
+        int aj = nums[n - 1] + 1 + (taken - 1) * 1;
+        int sum = taken * (ai + aj) / 2;
+        return res + sum;
+    }
+}
+```
+
