--- a/docs/基础/01基础知识/数/前三大.md
+++ b/docs/基础/01基础知识/数/前三大.md
@@ -1,59 +1,73 @@
 [toc]
 
-## max
-
-次大
+## 二级
 
 ```java
-int first = -1, second = -1;
-for(int i=0;i<n;i++){
-    int num = nums[i];
-    if(num > first){
-        second = first;
-        first = num;
+int min1 = Integer.MAX_VALUE, min2 = Integer.MAX_VALUE - 1;
+// 整体向右 num min1 min2
+if(num < min1){
+    min2 = min1;
+    min1 = num;
+}
+// num >= min1 && num < min2
+else if (num < min2){
+    min2 = num;
+}
+
+
+int max1 = Integer.MIN_VALUE + 1, max2 = Integer.MIN_VALUE;
+// 整体向左 max2 max1 num
+if(max1 < num){
+    max2 = max1;
+    max1 = num;
+}
+// max2 < num && num <= max1
+else if (max2 < num){
+    max2 = num;
+}
+```
+```java
+if (y < min2) {
+    if (y < min1) {
+        min2 = min1;
+        min1 = y;
+    } else {
+        min2 = y;
     }
-    // num < first && num > second
-    else if (num > second){
-        second = num;
+}
+if (max2 < y) {
+    if (max1 < y) {
+        max2 = max1;
+        max1 = y;
+    } else {
+        max2 = y;
     }
 }
 ```
+
+
+
+## 三级
+
 次次大
 
 ```java
-int first = -1, second = -1, third = -1;
+int max1 = -1, max2 = -1, max3 = -1;
 for(int i=0;i<n;i++){
     int num = nums[i];
-    if(num > first){
-        third = second;
-        second = first;
-        first = num;
+    if(num > max1){
+        max3 = max2;
+        max2 = max1;
+        max1 = num;
     }
     // num < first && num > second
-    else if (num > second){
-        third = second;
-        second = num;
+    else if (num > max2){
+        max3 = max2;
+        max2 = num;
     }
     // num < first && num < second && num > third
-    else if (num > third){
-        third = num;
-    }
-}
-```
-
-## min
-
-```java
-int first = 1000000, second = 100000;
-for(int i=0;i<n;i++){
-    int num = nums[i];
-    if(num < first){
-        second = first;
-        first = num;
-    }
-    // num >= first && num < second
-    else if (num < second){
-        second = num;
+    else if (num > max3){
+        max3 = num;
     }
 }
 ```
