--- a/docs/基础/03排序/06_堆.md
+++ b/docs/基础/03排序/06_堆.md
@@ -402,11 +402,11 @@ void heapSort(int[] nums) {
 
 ## 时间复杂度
 
-建堆：Floyd O(n), 威廉姆斯算法 O(nlogn)
+建堆：**Floyd O(n)**,  威廉姆斯算法 O(nlogn)
 
-入堆和出堆操作的时间复杂度均为 𝑂(log⁡𝑛) 
+**入堆和出堆**操作的时间复杂度均为 𝑂(log⁡𝑛) 
 
-堆排序: O(nlogn)
+堆排序: **O(nlogn)**
 
 ## PriorityQueue
 
