--- a/docs/基础/数组.md
+++ b/docs/基础/数组.md
@@ -1,5 +1,12 @@
-[1827. 最少操作使数组递增.md](..\题\leetcode\1827. 最少操作使数组递增.md)：操作几次让数组严格递增（元素唯一）
+[1827. 最少操作使数组递增.md](..\题\leetcode\1827. 最少操作使数组递增.md)：操作几次让数组严格递增
 
-[945. 使数组唯一的最小增量.md](..\题\leetcode\945. 使数组唯一的最小增量.md) ：排序后的 1827
+[945. 使数组唯一的最小增量.md](..\题\leetcode\945. 使数组唯一的最小增量.md) ：操作几次让数组元素唯一，就是让数组排序后，再严格递增
 
-[2233. K 次增加后的最大乘积.md](..\题\leetcode\2233. K 次增加后的最大乘积.md) 
+
+
+[2233. K 次增加后的最大乘积.md](..\题\leetcode\2233. K 次增加后的最大乘积.md)：贪心+小顶堆
+
+
+
+如何挑选出数组中最小的、且不相邻的k个元素？ [3.md](..\题\笔试\pdd\25春\1\3.md) ，dfs遍历
+
