--- a/docs/题/leetcode/1827. 最少操作使数组递增.md
+++ b/docs/题/leetcode/1827. 最少操作使数组递增.md
@@ -1,4 +1,15 @@
-就是 [945. 使数组唯一的最小增量.md](945. 使数组唯一的最小增量.md)  不排序的结果
+> 求操作几次让数组严格递增
+
+从左到右遍历数组，让数组严格递增：
+
+- 如果当前元素 > 上一个元素，保持不变；
+- 如果当前元素 <= 上一个元素，就需要增加当前元素到大于上一个元素。
+
+
+
+例如  [1, 1, 2, 2, 3, 7]。
+
+![数字增加的过程（动图）](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202503081652858.gif)
 
 ```java
 class Solution {
