--- a/docs/基础/03排序/排序.md
+++ b/docs/基础/03排序/排序.md
@@ -131,3 +131,76 @@
 - 计数：选出最大值，计数数组 m + 1。
 
 - 基数：从低位到高位进行计数排序，基数作计数。
+
+## 计算题
+
+### 猜出排序
+
+#### 指定结果
+
+> 有字符序列（Q，H，C，Y，P，A，M，S，R，D，F，X），新序列（F，H，C，D，A，M，P，S，R，Y，Q，X）是下列哪个排序算法。
+>
+> 快速排序。确实只有一个M在应该存在的位置；
+
+快速排序，哨兵。
+
+冒泡排序，看末尾，而且每趟只动一个。
+
+#### 指定排序
+
+快速排序的哨兵，有些是首位，有些是随机。
+
+> 排序算法中，将所有元素进行一遍处理的过程称为“趟”。下列序列中，不可能是快速排序第二趟排序结果的是D
+>
+> A 2,1,4,3,5,7,6,8
+>
+> B 1,4,2,5,3,7,6,8
+>
+> C 1,3,4,2,5,6,8,7
+>
+> D 2,1,3,5,4,6,8,7
+
+快速排序如第一趟确定的值是**首尾元素**，则第二趟只能确定一个数；
+
+如第一趟确定的是**中间元素**，则第二趟会确定两个元素。
+
+![image-20240622232637827](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406222326894.png)
+
+## leetcode
+
+### 归并排序
+
+统计个数
+
+​	[493. 翻转对.md](..\..\题\leetcode\493. 翻转对.md) ：分开。
+
+​	[计算数组的小和.md](..\..\题\笔试\计算数组的小和.md) ：一起。
+
+​	🚀[LCR 170. 交易逆序对的总数.md](..\..\题\leetcode\LCR 170. 交易逆序对的总数.md)：一起。当满足 `nums[i] > nums[j]`时，左子数组中的 i 右边的数一定大于`nums[j]`，就是逆序对的个数`count += m - p1 + 1;`
+
+改造：
+
+​	 [23. 合并 K 个升序链表.md](..\..\题\leetcode\23. 合并 K 个升序链表.md) ：
+
+### 堆
+
+[215. 数组中的第K个最大元素.md](..\..\题\leetcode\215. 数组中的第K个最大元素.md) : 
+
+都是替换堆顶。
+
+topK大的最优：维护小顶堆 nlogk
+
+topK小的最优：维护大顶堆 nlogk
+
+​	**堆顶元素是最大最小，但堆底部的左右顺序无法控制**。
+
+​	拿topK大来说。所以如果大顶堆，堆顶是最大值，我们无法堆底的topk。所以只能用小顶堆，堆顶就是topk大。
+
+​	拿topK小来说。所以如果小顶堆，堆顶是最小值，我们无法堆底的topk。所以只能用大顶堆，堆顶就是topk小。
+
+​	从n个元素中查找最小的k个元素时，使用大顶堆的效率比使用小顶堆更高“。前者（维护k个元素的大顶堆）是 nlogk，后者（维护n个元素的小顶堆）是nlogn。
+
+
+
+[295. 数据流的中位数.md](..\..\题\leetcode\295. 数据流的中位数.md)  
+
