--- a/docs/基础/05递归/斐波那契数.md
+++ b/docs/基础/05递归/斐波那契数.md
@@ -1,6 +1,6 @@
 [toc]
 
-# 斐波那契数列
+## 斐波那契数列
 
 $$
 f(n) = 
@@ -27,7 +27,7 @@ $$
   * 简化为：$f(n) = \frac{1}{2.236}*({1.618}^n - {(-0.618)}^n)$
   * 带入递归次数公式 $2*\frac{1}{2.236}*({1.618}^{n+1} - {(-0.618)}^{n+1})-1$
   * 时间复杂度为 $\Theta(1.618^n)$
-# 题
+## 题
 
  [509. 斐波那契数列.md](..\..\题\leetcode\509. 斐波那契数列.md)  
 
