--- a/docs/基础/08图/03生成树.md
+++ b/docs/基础/08图/03生成树.md
@@ -61,9 +61,9 @@ PS：两节点已连通的判断，不能通过vis，两节点都已遍历过的
 
 一般来说，一个并查集对应三个操作：
 
-- 初始化（ Init()函数 ）
+- 初始化（ Init()函数 ）：节点的代表元素就是自身
 - 查找代表元（ Find()函数 ）
-- 尝试合并集合（ Join()函数 ）
+- 尝试合并集合（ Join()函数 ）：如果本来就在同一个集合中，**返回false**
 
 ```java
 class DisjointSet {
@@ -84,9 +84,7 @@ class DisjointSet {
             return x;
         } 
         // 递归，并将其直接指向根，缩短查找时间
-        else {
-            return pre[x] = find(pre[x]);
-        }
+        return pre[x] = find(pre[x]);
     }
 
     public boolean join(int x, int y) {
