--- a/docs/题/leetcode/104. 二叉树的最大深度.md
+++ b/docs/题/leetcode/104. 二叉树的最大深度.md
@@ -41,27 +41,22 @@ class Solution {
 
 ```java
 class Solution {
-    int res = 0;
+    int max = Integer.MIN_VALUE;
     int cnt = 0;
     public int maxDepth(TreeNode root) {
         dfs(root);
-        return res;
+        return max;
     }
 
     public void dfs(TreeNode root){
         if(root == null){
+            max = Math.max(max, cnt);
             return;
         }
-        // 当前节点不是null， +1
-        cnt += 1;
-        // 当前节点，无孩子，是叶子节点
-        if(root.left == root.right){
-            res = Math.max(res, cnt);
-        }
+        cnt++;
         dfs(root.left);
         dfs(root.right);
-        cnt -= 1;
-
+        cnt--;
     }
 }
 ```
