--- a/docs/题/leetcode/225. 用队列实现栈.md
+++ b/docs/题/leetcode/225. 用队列实现栈.md
@@ -1,6 +1,13 @@
-# 双队列
+[toc]
 
 每次入队，让队列之前的元素重新入队。
+
+## 双队列
+
+类似幸存者区，S1有元素，S2无元素：
+
+- 入队：新元素先入队S2，再将S1老东西重新入队，然后交换S1、S2的身份
+- 出队、队首、判kong：只有S1有元素，S2是空的，所以都看S1
 
 ![image-20240620121552575](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406201215619.png)
 
@@ -41,7 +48,7 @@ class MyStack {
 }
 ```
 
-# 单队列
+## 单队列
 
 ![image-20240620122132203](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406201221245.png)
 
