--- a/docs/题/leetcode/232. 用栈实现队列.md
+++ b/docs/题/leetcode/232. 用栈实现队列.md
@@ -1,4 +1,10 @@
-s1负责入，缓存累计的元素，s2负责出（空则导入s1，完成逆序，不空则直接弹出）
+一个存储栈s1，一个输出栈s2
+
+- 入队：到s1中
+
+- 出队：
+  - 不空则直接弹出
+  - 空则将s1全部出栈入栈到s2中再弹出
 
 ![image-20240620123756953](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406201237996.png)
 
