--- a/docs/题/leetcode/509. 斐波那契数列.md
+++ b/docs/题/leetcode/509. 斐波那契数列.md
@@ -1,144 +1,76 @@
 [TOC]
 
-# 509. 斐波那契数列
-
 ## 普通递归
 ```java
 class Solution {
     public int fib(int n) {
-        return rec(n);
-    }
-
-    public int rec(int n) {
-        if (n == 0 || n == 1) {
+        if (n < 2)
             return n;
-        }
-        return rec(n - 1) + rec(n - 2);
+        return fib(n - 1) + fib(n - 2);
     }
 }
 ```
 
 ## 记忆数组+递归
 
-两种方式：一种在递归外面填充边界条件，另一种在递归内作为边界条件填充数组。
+不能直接由dp得到结果，还要经过递归，只能说是存储了递归的结果。
+
+<img src="https://labuladong.online/algo/images/dynamic-programming/2.jpg" alt="img" style="zoom:50%;" />
+
 ```java
 class Solution {
     public int fib(int n) {
-        if (n <= 1) {
+        int[] dp = new int[n + 1];
+        return f(dp, n);
+    }
+
+    public int f(int[] dp, int n) {
+        if(n < 2){
             return n;
         }
-        // 因为0，多一个
-        int[] cache = new int[n + 1];
-        Arrays.fill(cache, -1);
-        cache[0] = 0;
-        cache[1] = 1;
-        return rec(n, cache);
-    }
-
-    public int rec(int n, int[] cache) {
-        if (cache[n] == -1) {
-            cache[n] = rec(n - 1, cache) + rec(n - 2, cache);
+        if (dp[n] == 0) {
+            dp[n] = f(dp, n - 1) + f(dp, n - 2);
         }
-        return cache[n];
-    }
-}
-```
-```java
-class Solution {
-    public int fib(int n) {
-        int[] cache = new int[n + 1];
-        Arrays.fill(cache, -1);
-        return rec(n, cache);
-    }
-
-    public int rec(int n, int[] cache) {
-        if (n == 0) {
-            cache[0] = 0;
-            return 0;
-        } else if (n == 1) {
-            cache[1] = 1;
-            return 1;
-        }
-
-        if (cache[n] == -1) {
-            cache[n] = rec(n - 1, cache) + rec(n - 2, cache);
-        }
-        return cache[n];
-    }
-}
-```
-
-## 动态规划
-
-动态规划，区别于递归版，就是可能会涉及无用计算。
-
-但是结果却是动态规划不会超时！！ [70. 爬楼梯.md](70. 爬楼梯.md) 
-
-```java
-class Solution {
-    public int fib(int n) {
-        if (n == 0) {
-            return 0;
-        } else if (n == 1) {
-            return 1;
-        }
-
-        int[] cache = new int[n + 1];
-        Arrays.fill(cache, -1);
-        cache[0] = 0;
-        cache[1] = 1;
-        // i <= n : 包含n，只是多记录n=0而已
-        for (int i = 2; i <= n; i++) {
-            cache[i] = cache[i - 1] + cache[i - 2];
-        }
-        return cache[n];
-    }
-}
-```
-```java
-// 递归版
-class Solution {
-    int[] dp;
-    int n;
-
-    public int fib(int n) {
-        if (n <= 1) {
-            return n;
-        }
-        this.n = n;
-        dp = new int[n + 1];
-        dp[0] = 0;
-        dp[1] = 1;
-        f(2);
         return dp[n];
     }
-
-    public void f(int i) {
-        if (i == n + 1) {
-            return;
-        }
-        dp[i] = dp[i - 1] + dp[i - 2];
-        f(i + 1);
-    }
 }
 ```
+## 动态规划
+
+完全舍弃递归，自底向上。
+
+<img src="https://labuladong.online/algo/images/dynamic-programming/4.jpg" alt="img" style="zoom:50%;" />
+
 ```java
 class Solution {
     public int fib(int n) {
-        if (n == 0) {
-            return 0;
-        } else if (n == 1) {
-            return 1;
-        }
-        int a = 0;
-        int b = 1;
-        int t = -1;
+        int size = n + 1 > 2 ? n + 1: 2;        // dp[n+1] 因为只要dp[0] 就不能初始化dp[1]
+        int[] dp = new int[size];
+        dp[0] = 0;
+        dp[1] = 1;
         for (int i = 2; i <= n; i++) {
-            t = b;
-            b = a + b;            
-            a = t;
+            dp[i] = dp[i - 1] + dp[i - 2];
         }
-        return b;
+        return dp[n];
+    }
+}
+```
+n轮的空间优化：
+
+```java
+class Solution {
+    public int fib(int n) {
+        if(n < 2){
+            return n;
+        }
+        int i_2 = 0, i_1 = 1;        
+        for (int i = 2; i <= n; i++) {
+            int i_cur = i_2 + i_1;
+            // 向右gun'don
+            i_2 = i_1;
+            i_1 = i_cur;
+        }
+        return i_1;
     }
 }
 ```
