--- a/docs/题/leetcode/946. 验证栈序列.md
+++ b/docs/题/leetcode/946. 验证栈序列.md
@@ -1,3 +1,30 @@
+给定 `pushed` 和 `popped` 两个序列，每个序列中的 **值都不重复**，只有当它们可能是在最初空栈上进行的推入 push 和弹出 pop 操作序列的结果时，返回 `true`；否则，返回 `false` 。
+
+> **示例 1：**
+>
+> ```
+> 输入：pushed = [1,2,3,4,5], popped = [4,5,3,2,1]
+> 输出：true
+> 解释：我们可以按以下顺序执行：
+> push(1), push(2), push(3), push(4), pop() -> 4,
+> push(5), pop() -> 5, pop() -> 3, pop() -> 2, pop() -> 1
+> ```
+>
+> **示例 2：**
+>
+> ```
+> 输入：pushed = [1,2,3,4,5], popped = [4,3,5,1,2]
+> 输出：false
+> 解释：1 不能在 2 之前弹出。
+> ```
+
+
+
+思路：模拟入栈和出栈过程：
+
+- 遍历入栈元素：
+- 入栈，并尝试出栈：栈非空，和目标出栈元素一样
+
 ```java
 // 946. 验证栈序列
 class Solution {
@@ -16,9 +43,3 @@ class Solution {
 }
 ```
 
-模拟入栈和出栈过程：
-
-- 入栈
-- 检查是否可出栈：栈非空，和目标出栈元素一样
-
-https://www.bilibili.com/video/BV1nf4y167d7/?p=2
