--- a/docs/基础/02二分查找/二分查找.md
+++ b/docs/基础/02二分查找/二分查找.md
@@ -8,6 +8,16 @@
 
 
 
+时间复杂度：同二叉搜索树，循环次数最多为二叉树的高度，$O(\log⁡ n)$ 时间
+
+
+
+12个元素的排序数组进行二分查找，每个元素被查找的概率是相等的，则平均比较次数是？37/12
+
+​	$查找次数/元素个数=1*1+2*2+3*4+4*5$。画一个二叉树，第i层就要比较ici
+
+
+
 **target < nums[m] < target**。nums[m]在中间（对应m是中间索引）
 
 1. 基础版和改动版：区别就是**左闭右闭**、左闭右开。
@@ -202,15 +212,7 @@ class Solution {
 
 ​	 [162. 寻找峰值.md](..\题\leetcode\162. 寻找峰值.md) 
 
-## 时间复杂度
 
-二叉搜索树的查找操作与二分查找算法的工作原理一致，都是每轮排除一半情况。循环次数最多为二叉树的高度，当二叉树平衡时，使用 𝑂(log⁡𝑛) 时间
-
-
-
-12个元素的排序数组进行二分查找，每个元素被查找的概率是相等的，则平均比较次数是？37/12
-
-​	$查找次数/元素个数=1*1+2*2+3*4+4*5$。画一个二叉树，第i层就要比较ici
 
 ## leetcode
 
