--- a/docs/基础/07树/计算题.md
+++ b/docs/基础/07树/计算题.md
@@ -27,9 +27,63 @@
 
 
 
-度：n0=n2+1
+度：
 
-对于任一二叉树，若度为2的结点有n2个，则叶子结点数必为n2+1
+- 节点拥有子节点的个数。看作有向图，就是出度
+
+## 完全二叉树
+
+完全二叉树可以看做是满二叉树的删减，**最底层节点靠左填充，其他层节点全被填满**。
+
+- 完全二叉树的生成遵从**从左往右，从上到下**的顺序。
+- 若一颗完全二叉树中某节点无左孩子，那么也*必无右孩子*，该节点是*叶子节点*（根节点也是叶子节点）
+- 完全二叉树的叶节点只可能出现在**后两层**
+- 叶子节点>=非叶子节点。比如，0-1，0-1-2
+- 完全二叉树中度为1的节点只会是0个或者1个
+  - 总节点是奇数：0个
+  - 总结点是偶数：1个
+- 非叶子节点：n/2（向下取整）
+- 叶子节点：$\lceil n/2\rceil$（向上取整）
+
+
+
+> 完全二叉树可以看成是满二叉树最后一层的节点从右至左连续的砍掉一些，
+>
+> 而完全二叉树的总结点是 2^(k) - 1，是奇数
+>
+> 如果砍掉的节点个数是奇数，那么完全二叉树的总结点是偶数，度为1的结点个数为1
+>
+> 如果砍掉的节点个数是偶数，那么完全二叉树的总结点是奇数，度为1的结点个数为0
+
+
+
+> 完全二叉树同堆，最后一个非叶子节点是 n/2 - 1
+>
+> 那么非叶子节点 = n/2-1 - 0 + 1 = n/2
+>
+> 叶子节点 = $n - \lfloor n / 2\rfloor = \lceil n/2\rceil$
+
+
+
+## 节点个数
+
+> 一棵完全二叉树共有54711个节点，则它有多少个叶子节点？
+
+ $\lceil 54711/2\rceil$
+
+
+
+> **一颗完全二叉树第六层有8个叶结点（根为第一层），则结点个数最多有（）个。**
+
+完全二叉树的叶节点只可能出现在**后两层**
+
+如果完全二叉树有6层，则前5层是满二叉树，总节点数目为31+8=39
+
+如果完全二叉树有7层，则前6层是满二叉树，前六层总节点数目为63，第六层有8个叶子节点，则有32-8=24个非叶子节点，第七层最多有24\*2个叶子节点，总节点数目为63+24\*2=111
+
+
+
+> 任一二叉树：**n0=n2+1**
 
 证明：	
 
@@ -41,34 +95,18 @@
 
 
 > 哈夫曼树一共有 215个节点，进行编码，最多可以编码多少个字符？
->
-> 即求叶子节点的数量，n0 = n2 + 1，n = n0 + 0 + n2（huffman树没有度为1的节点） ，则108 
 
-## 完全二叉树
-
-完全二叉树可以看做是满二叉树的删减，**最底层节点靠左填充，其他层节点全被填满**。
-
-​	完全二叉树的生成遵从从左往右，从上到下的顺序。
-
-​	若一颗**完全二叉树**中某节点无左孩子，那么也必无右孩子，该节点是叶子节点（根节点也是叶子节点）
+即求叶子节点的数量，n0 = n2 + 1，n = n0 + 0 + n2（huffman树没有度为1的节点） ，则108 
 
 
 
-一棵完全二叉树共有54711个节点，则它有多少个叶子节点？
+> **已知在一棵度为4的树T中，若有20个度为4的结点，10个度为3的结点，1个度为2的结点，10个度为1的结点，则树T的叶子结点的个数为？**
 
-​	假设完全二叉树的节点数量为 𝑛 ，则叶节点数量为 (𝑛+1)/2  向下整除，非叶节点数量为 (𝑛−1)/2 向下整除。（叶子节点>=非叶子节点。0-1，0-1-2）
+n = n0 + n1 + n2 + n3 + n4
 
-​	推导过程：
+e =  n – 1 = n0 \* 0 + n1 \* 1+ n2 \* 2 + n3 \* 3 + n4 \* 4
 
-​	$2^{15}-1 < 54711 <= 2^{16}-1$，则有16层。
-
-​	最后一层的节点有，总节点数减去前15层节点数，$54711-(2^{15}-1)=21944$, 记为$x=n-(2^{h-1}-1)$
-
-​	最后一层的空缺节点，$2^{16-1}-21944=10824$，上推叶子节点为$10824 / 2 = 5412$, 记为$y = \dfrac{2^{h-1}-x}{2}$
-
-​	共21944 + 5412 = 27356。即$ans = x + y = x + \dfrac{2^{h-1}-x}{2} = \dfrac{n+1}{2}$
-
-​	
+所以，n0=82
 
 ## 平衡二叉树
 
