--- a/docs/基础/数组.md
+++ b/docs/基础/数组.md
@@ -7,6 +7,10 @@
 
 
 
+[88. 合并两个有序数组.md](..\题\leetcode\88. 合并两个有序数组.md) ：倒着排序，有点意思
+
+
+
 [1827. 最少操作使数组递增.md](..\题\leetcode\1827. 最少操作使数组递增.md)：操作几次让数组严格递增
 
 [945. 使数组唯一的最小增量.md](..\题\leetcode\945. 使数组唯一的最小增量.md) ：操作几次让数组元素唯一，就是让数组排序后，再严格递增
