--- a/docs/基础/04链表/链表.md
+++ b/docs/基础/04链表/链表.md
@@ -175,6 +175,8 @@ class Solution {
 
 ### 🚀反转链表
 
+[206. 反转链表 - 力扣（LeetCode）](https://leetcode.cn/problems/reverse-linked-list/description/)
+
 ```java
 class Solution {
     public ListNode reverseList(ListNode head) {
@@ -219,44 +221,50 @@ class Solution {
 
 
 
- [彩虹链表.md](..\..\题\笔试\彩虹链表.md) ：中间节点 + 反转列表 + 融合列表（变为交替）
+[彩虹链表.md](..\..\题\笔试\彩虹链表.md) ：中间节点 + 反转列表 + 融合列表（变为交替）
 
 
 
-删除元素 
+> 删除元素 
 
-​	[19. 删除链表的倒数第 N 个结点.md](..\..\题\leetcode\19. 删除链表的倒数第 N 个结点.md) ：快慢指针，删除要sentinel，找倒 n+1
+[19. 删除链表的倒数第 N 个结点.md](..\..\题\leetcode\19. 删除链表的倒数第 N 个结点.md) ：快慢指针，删除要sentinel，找倒 n+1
 
-​	
 
-​	[83. 删除排序链表中的重复元素.md](..\..\题\leetcode\83. 删除排序链表中的重复元素.md)（1221→121，留一个）：cur cur.next 
 
-​	[82. 删除排序链表中的重复元素 II.md](..\..\题\leetcode\82. 删除排序链表中的重复元素 II.md) （1224→14，不留，但保证输入升序）：cur cur.next  cur.next.next 
+[83. 删除排序链表中的重复元素.md](..\..\题\leetcode\83. 删除排序链表中的重复元素.md)（1221→121，留一个）：cur cur.next 
 
-​	真题（1221→空，不留，且可能回去再删）：
+[82. 删除排序链表中的重复元素 II.md](..\..\题\leetcode\82. 删除排序链表中的重复元素 II.md) （1224→14，不留，但保证输入升序）：cur cur.next  cur.next.next 
 
-​	 [删除链表重复节点.md](..\..\题\笔试\Untitled Folder\删除链表重复节点.md)（1221→[]，不留，bu保证输入升序） ：
+真题（1221→空，不留，且可能回去再删）：
 
-​	237 [203. 移除链表元素.md](..\..\题\leetcode\203. 移除链表元素.md) 
+ [删除链表重复节点.md](..\..\题\笔试\Untitled Folder\删除链表重复节点.md)（1221→[]，不留，bu保证输入升序） ：
 
-相交
+237 [203. 移除链表元素.md](..\..\题\leetcode\203. 移除链表元素.md) 
 
-[	160. 相交链表.md](..\..\题\leetcode\160. 相交链表.md) 
 
-环
 
-​	 [141. 环形链表.md](..\..\题\leetcode\141. 环形链表.md) ：slow和fast相遇
+> 相交
 
-​	[142. 环形链表 II.md](..\..\题\leetcode\142. 环形链表 II.md) ：slow和fast相遇，再slow和head相遇
+[160. 相交链表.md](..\..\题\leetcode\160. 相交链表.md) 
 
-​	 [获取倒n.md](..\..\题\leetcode\获取倒n.md) [19. 删除链表的倒数第 N 个结点.md](..\..\题\leetcode\19. 删除链表的倒数第 N 个结点.md) 
 
-链表进位：
 
-​	 [2. 两数求和.md](..\..\题\leetcode\2. 两数求和.md) ：**逆序**（进位往右，链表左对齐） 
+> 环
 
-​	[445. 两数相加 II.md](..\..\题\leetcode\445. 两数相加 II.md) : 顺序（进位往左，链表右对齐）
+ [141. 环形链表.md](..\..\题\leetcode\141. 环形链表.md) ：slow和fast相遇
 
-回文：
+[142. 环形链表 II.md](..\..\题\leetcode\142. 环形链表 II.md) ：slow和fast相遇，再slow和head相遇
 
-​	 [234. 回文链表.md](..\..\题\leetcode\234. 回文链表.md) 
+ [获取倒n.md](..\..\题\leetcode\获取倒n.md) [19. 删除链表的倒数第 N 个结点.md](..\..\题\leetcode\19. 删除链表的倒数第 N 个结点.md) 
+
+> 链表进位：
+
+ [2. 两数相加.md](..\..\题\leetcode\2. 两数相加.md)  ：**逆序**（进位往右，链表左对齐） 
+
+[445. 两数相加 II.md](..\..\题\leetcode\445. 两数相加 II.md) : 顺序（进位往左，链表右对齐）
+
+
+
+> 回文
+
+ [234. 回文链表.md](..\..\题\leetcode\234. 回文链表.md) 
