--- a/docs/题/leetcode/445. 两数相加 II.md
+++ b/docs/题/leetcode/445. 两数相加 II.md
@@ -1,82 +1,110 @@
+[toc]
+
 ![image-20241103111548954](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202411031115015.png)
 
-## 栈
+[445. 两数相加 II - 力扣（LeetCode）](https://leetcode.cn/problems/add-two-numbers-ii/)
 
-用栈来弹出。
-
-```java
-class Solution {
-    public ListNode addTwoNumbers(ListNode l1, ListNode l2) {
-        LinkedList<Integer> statck1 = new LinkedList<>();
-        LinkedList<Integer> statck2 = new LinkedList<>();
-        
-        while(l1 != null){
-            statck1.push(l1.val);
-            l1 = l1.next;
-        }
-        while(l2!= null){
-            statck2.push(l2.val);
-            l2= l2.next;
-        }
-
-        // 头插
-        ListNode head = null;
-        int carry = 0;
-        while(!statck1.isEmpty() || !statck2.isEmpty() || carry != 0){
-            if(!statck1.isEmpty()){
-                carry += statck1.pop();
-            }
-            if(!statck2.isEmpty()){
-                carry += statck2.pop();
-            }
-            head = new ListNode(carry % 10, head);
-            carry /= 10;
-        }
-        return head;
-    }
-}
-```
+[面试题 02.05. 链表求和 - 力扣（LeetCode）](https://leetcode.cn/problems/sum-lists-lcci/description/)
 
 
-
-## 反转链表
+## 反转链表：2ms
 
 反转后就等同 两数求和。
 
 ```java
 class Solution {
     public ListNode addTwoNumbers(ListNode l1, ListNode l2) {
-        return reverse(addTwo(reverse(l1), reverse(l2)));
+        ListNode r1 = reverse(l1);
+        ListNode r2 = reverse(l2);
+        ListNode sum = addTwo(r1, r2);
+        return reverse(sum);
     }
 
-    private ListNode reverse(ListNode head){
-        if(head == null || head.next == null){
-            return head;
-        }
-        ListNode last = reverse(head.next);
-        head.next.next = head;
-        head.next = null;
-        return last;
-    }
-
-    private ListNode addTwo(ListNode l1, ListNode l2){
-        ListNode dummy = new ListNode(-1), cur = dummy;
-        int carry = 0;
-        while(l1 != null || l2 != null || carry != 0){
+    public ListNode addTwo(ListNode l1, ListNode l2){
+        int add = 0;
+        ListNode dummy = new ListNode();
+        ListNode cur = dummy;
+        while(l1 != null || l2 != null || add != 0){
             if(l1 != null){
-                carry += l1.val;
+                add += l1.val;
                 l1 = l1.next;
             }
             if(l2 != null){
-                carry += l2.val;
+                add += l2.val;
                 l2 = l2.next;
             }
-            cur.next = new ListNode(carry % 10);
+            cur.next = new ListNode(add % 10);
             cur = cur.next;
-            carry /= 10;
+            add /= 10;
         }
         return dummy.next;
+    }
+
+    
+    public ListNode reverse(ListNode head) {
+        if (head == null || head.next == null) {
+            return head;
+        }
+        ListNode next = head.next;
+        ListNode last = reverse(next);
+        next.next = head;
+        head.next = null;
+        return last;
     }
 }
 ```
 
+## 栈：3ms
+
+逆序，那么就用栈来转化。
+
+用栈来弹出就是正序进位。
+
+```java
+class Solution {
+    public ListNode addTwoNumbers(ListNode l1, ListNode l2) {
+        LinkedList<ListNode> s1 = new LinkedList<>();
+        LinkedList<ListNode> s2 = new LinkedList<>();
+        while(l1 != null){
+            s1.push(l1);
+            l1 = l1.next;
+        }
+        while(l2 != null){
+            s2.push(l2);
+            l2 = l2.next;
+        }
+        ListNode sum = addTwo(s1, s2);
+        return sum;
+    }
+
+    public ListNode addTwo(LinkedList<ListNode> s1, LinkedList<ListNode> s2){
+        int add = 0;
+        ListNode dummy = new ListNode();
+        while(!s1.isEmpty() || !s2.isEmpty() || add != 0){
+            if(!s1.isEmpty()){
+                add += s1.pop().val;
+            }
+            if(!s2.isEmpty()){
+                add += s2.pop().val;
+            }
+            ListNode head = new ListNode(add % 10);
+            head.next = dummy.next;
+            dummy.next = head;
+            add /= 10;
+        }
+        return dummy.next;
+    }
+
+    
+    public ListNode reverse(ListNode head) {
+        if (head == null || head.next == null) {
+            return head;
+        }
+        ListNode next = head.next;
+        ListNode last = reverse(next);
+        next.next = head;
+        head.next = null;
+        return last;
+    }
+}
+```
